--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -6774,6 +6774,7 @@ nav ul a span.badge {
 .row .col.s10 {
   width: 83.3333333333%;
   margin-left: auto;
+  margin-bottom: auto;
   left: auto;
   right: auto;
 }
@@ -9115,8 +9116,8 @@ textarea.materialize-textarea {
 
 [type="radio"]:checked + label:after {
   border-radius: 50%;
-  border: 2px solid #26a69a;
-  background-color: #26a69a;
+  border: 2px solid #9e9e9e;
+  background-color: #000000;
   z-index: 0;
   -webkit-transform: scale(1.02);
           transform: scale(1.02);
@@ -9836,6 +9837,7 @@ select {
 .side-nav.fixed {
   left: 0;
   position: fixed;
+  width: 16.66666667%;
 }
 
 .side-nav.fixed.right-aligned {
