--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -8555,7 +8555,7 @@ a.waves-effect .waves-ripple {
 
 .side-nav .collapsible-body {
   border: 0;
-  background-color: #fff;
+  background-color: #424242; /* BINAGO KO TO */
 
 }
 
@@ -9785,7 +9785,7 @@ select {
   height: calc(100% + 60px);
   height: -moz-calc(100%);
   padding-bottom: 60px;
-  background-color: #fff;
+  background-color: #616161;
   z-index: 999;
   overflow-y: auto;
   will-change: left;
@@ -9808,7 +9808,7 @@ select {
 }
 
 .side-nav li:hover, .side-nav li.active {
-  background-color: #ddd;
+  background-color: #212121; /* BINAGO KO TO */
 }
 
 .side-nav a {
